--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bignumber.js": "9.0.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "5.0.4",
+    "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
     "secretjs": "0.16.5"
   },
