--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "viewing-keys-wizard",
-  "description": "An awesome app to do awesome things",
+  "name": "get-privacy",
+  "description": "Get Privacy using IBC and Secret Network",
   "version": "0.0.0",
   "scripts": {
     "start": "vite",
@@ -8,25 +8,25 @@
     "preview": "yarn build && vite preview"
   },
   "dependencies": {
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@mui/icons-material": "5.0.1",
-    "@mui/material": "5.0.2",
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.1.1",
+    "@mui/material": "5.1.1",
     "bignumber.js": "9.0.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "5.0.4",
-    "react-device-detect": "2.0.1",
+    "react-device-detect": "2.1.2",
     "react-dom": "17.0.2",
-    "secretjs": "0.16.5"
+    "secretjs": "0.17.3"
   },
   "devDependencies": {
-    "@keplr-wallet/types": "0.8.13",
-    "@types/react": "17.0.24",
-    "@types/react-copy-to-clipboard": "5.0.1",
-    "@types/react-dom": "17.0.9",
+    "@keplr-wallet/types": "0.9.6",
+    "@types/react": "17.0.35",
+    "@types/react-copy-to-clipboard": "5.0.2",
+    "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "typescript": "4.4.3",
-    "vite": "2.5.10"
+    "typescript": "4.5.2",
+    "vite": "2.6.14"
   },
   "resolutions": {
     "@types/react": "17.0.13"
