--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_CHAIN_ID="secret-4"
-VITE_RPC_URL="http://localhost:26657/"
-VITE_LCD_URL="https://bridge-api-manager.azure-api.net"
+VITE_SECRET_CHAIN_ID="secret-4"
+VITE_SECRET_LCD_URL="https://bridge-api-manager.azure-api.net"
