--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "description": "Get Privacy using IBC and Secret Network",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "yarn build && vite preview"
+    "start": "parcel index.html",
+    "build": "parcel build index.html && cp public/* dist"
   },
   "dependencies": {
     "@cosmjs/stargate": "0.26.5",
@@ -19,7 +18,7 @@
     "react-copy-to-clipboard": "5.0.4",
     "react-device-detect": "2.1.2",
     "react-dom": "17.0.2",
-    "secretjs": "0.17.3"
+    "secretjs": "0.17.4-beta.1"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.9.6",
@@ -27,6 +26,7 @@
     "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "parcel": "2.0.1",
     "typescript": "4.5.2",
     "vite": "2.6.14"
   },
