A bunch of stuff

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "11.6.0",
     "@keplr-wallet/cosmos": "0.9.6",
     "@mui/icons-material": "5.1.1",
+    "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
     "bignumber.js": "9.0.1",
     "react": "17.0.2",
