--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "viewing-keys-wizard",
+  "name": "wrap.scrt.network",
   "description": "An awesome app to do awesome things",
   "version": "0.0.0",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html && cp public/* dist"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "yarn vite-build && vite preview"
   },
   "dependencies": {
     "@cosmjs/stargate": "0.26.5",
@@ -19,7 +20,7 @@
     "react-copy-to-clipboard": "5.0.4",
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
-    "secretjs": "0.17.3"
+    "secretjs": "0.17.4"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.8.13",
@@ -27,7 +28,6 @@
     "@types/react-copy-to-clipboard": "5.0.1",
     "@types/react-dom": "17.0.9",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "parcel": "2.0.1",
     "typescript": "4.5.2",
     "vite": "2.6.14"
   },
