--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "yarn vite-build && vite preview"
+    "preview": "yarn build && vite preview"
   },
   "dependencies": {
     "@cosmjs/stargate": "0.26.5",
@@ -20,7 +20,7 @@
     "react-copy-to-clipboard": "5.0.4",
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
-    "secretjs": "0.17.4"
+    "secretjs": "0.17.5"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.8.13",
