--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-copy-to-clipboard": "5.0.4",
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
+    "react-if": "4.1.1",
+    "react-socks": "2.2.0",
     "secretjs": "0.17.5"
   },
   "devDependencies": {
