--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
     "react-socks": "2.2.0",
-    "secretjs": "0.17.5"
+    "secretjs": "1.2.0-beta.31"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.8.13",
