--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_SECRET_CHAIN_ID="secret-4"
-VITE_SECRET_LCD_URL="https://bridge-api-manager.azure-api.net"
+VITE_SECRET_LCD_URL="https://api.roninventures.io/"
