--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "5.1.1",
     "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
+    "@tharsis/transactions": "0.2.5",
     "bignumber.js": "9.0.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "5.0.4",
