--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "5.1.1",
     "@tharsis/transactions": "0.2.5",
     "bignumber.js": "9.0.1",
+    "buffer": "6.0.3",
     "long": "5.2.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "5.0.4",
