--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "5.1.1",
     "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
+    "@noble/hashes": "1.1.2",
     "@tharsis/transactions": "0.2.5",
     "bignumber.js": "9.0.1",
     "buffer": "6.0.3",
