--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@cosmjs/stargate": "0.26.5",
     "@emotion/react": "11.6.0",
     "@emotion/styled": "11.6.0",
-    "@keplr-wallet/cosmos": "0.9.6",
+    "@keplr-wallet/cosmos": "0.11.10",
     "@mui/icons-material": "5.1.1",
     "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
@@ -26,10 +26,10 @@
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
     "react-socks": "2.2.0",
-    "secretjs": "1.4.0-alpha.8"
+    "secretjs": "1.4.4"
   },
   "devDependencies": {
-    "@keplr-wallet/types": "0.8.13",
+    "@keplr-wallet/types": "0.11.10",
     "@types/react": "17.0.24",
     "@types/react-copy-to-clipboard": "5.0.1",
     "@types/react-dom": "17.0.9",
