--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
     "react-socks": "2.2.0",
+    "react-toastify": "9.0.8",
     "secretjs": "1.4.4"
   },
   "devDependencies": {
