--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-if": "4.1.1",
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
-    "secretjs": "1.4.4"
+    "secretjs": "1.4.4",
+    "vite": "3.2.4"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
@@ -37,8 +38,7 @@
     "@types/react-copy-to-clipboard": "5.0.1",
     "@types/react-dom": "17.0.9",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "typescript": "4.5.2",
-    "vite": "2.6.14"
+    "typescript": "4.5.2"
   },
   "resolutions": {
     "@types/react": "17.0.13"
