Start of UI overhaul

--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@cosmjs/stargate": "0.26.5",
     "@emotion/react": "11.6.0",
     "@emotion/styled": "11.6.0",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "0.11.12",
     "@mui/icons-material": "5.1.1",
     "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
     "@noble/hashes": "1.1.2",
     "@tharsis/transactions": "0.2.5",
+    "autoprefixer": "^10.4.13",
     "bignumber.js": "9.0.1",
     "buffer": "6.0.3",
     "google-protobuf": "^3.14.0",
@@ -30,6 +35,8 @@
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
     "secretjs": "1.4.4",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.4",
     "vite": "3.2.4"
   },
   "devDependencies": {
