--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
+    "react-router-dom": "^6.4.3",
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
     "secretjs": "1.4.4",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
-    "vite": "3.2.4"
+    "vite": "3.2.4",
+    "vite-tsconfig-paths": "^3.6.0"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
