--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "src"
   },
-  "include": ["./src"]
+  "include": [
+    "src"
+  ]
 }
