--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.6.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "0.11.12",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.4.3",
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
+    "sass": "^1.56.1",
     "secretjs": "1.4.4",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
