--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "0.11.12",
+    "@material-tailwind/react": "^1.2.4",
     "@mui/icons-material": "5.1.1",
     "@mui/lab": "5.0.0-alpha.55",
     "@mui/material": "5.1.1",
@@ -34,6 +35,7 @@
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
     "react-router-dom": "^6.4.3",
+    "react-select": "^5.7.0",
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
     "sass": "^1.56.1",
