--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.0.1",
     "buffer": "6.0.3",
+    "chart.js": "^4.1.0",
     "google-protobuf": "^3.14.0",
     "long": "5.2.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^5.0.1",
     "react-copy-to-clipboard": "5.0.4",
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
