--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
     "sass": "^1.56.1",
-    "secretjs": "1.4.4",
+    "secretjs": "^1.6.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "3.2.4",
