--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-select": "^5.7.0",
     "react-socks": "2.2.0",
     "react-toastify": "9.0.8",
+    "react-tooltip": "^5.3.1",
     "sass": "^1.56.1",
     "secretjs": "^1.6.0",
     "tailwind": "^4.0.0",
