added keplr functionality

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "5.1.1",
     "@noble/hashes": "1.1.2",
     "@tharsis/transactions": "0.2.5",
+    "@types/react-modal": "^3.13.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.0.1",
@@ -38,6 +39,7 @@
     "react-device-detect": "2.0.1",
     "react-dom": "17.0.2",
     "react-if": "4.1.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.7.0",
     "react-socks": "2.2.0",
