added custom route-titles w/ helmet

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-copy-to-clipboard": "5.1.0",
     "react-device-detect": "2.2.2",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-if": "4.1.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
