--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-copy-to-clipboard": "5.1.0",
     "react-device-detect": "2.2.2",
     "react-dom": "18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-if": "4.1.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
