--- a/package.json
+++ b/package.json
@@ -48,20 +48,16 @@
     "react-tooltip": "^5.3.1",
     "sass": "^1.56.1",
     "secretjs": "^1.6.9",
-    "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-copy-to-clipboard": "5.0.4",
+    "@types/react": "18.0.27",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.10",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "typescript": "4.9.4"
-  },
-  "resolutions": {
-    "@types/react": "17.0.13"
   }
 }
