--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@cosmjs/stargate": "0.26.5",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -26,6 +26,7 @@
     "@noble/hashes": "1.1.5",
     "@tharsis/transactions": "0.2.5",
     "@types/react-modal": "^3.13.1",
+    "@vitejs/plugin-react": "^3.0.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.1.1",
@@ -57,7 +58,7 @@
     "@types/react": "18.0.27",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.10",
-    "@vitejs/plugin-react-refresh": "1.3.6",
     "typescript": "4.9.4"
-  }
+  },
+  "private": true
 }
