--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "An entry point for new users into Secret Network",
   "version": "0.0.1",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "yarn build && vite preview"
   },
