--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
+version: "3.8"
 services:
   dashboard_react_app:
     container_name: dashboard_frontend2
     build: ./
     ports:
-      - '3000:3000'
+      - "3000:3000"
     stdin_open: true
     tty: true
     environment:
