--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@noble/hashes": "1.1.5",
     "@tharsis/transactions": "0.2.5",
     "@types/react-modal": "^3.13.1",
-    "@vitejs/plugin-react": "^3.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.1.1",
@@ -49,14 +49,15 @@
     "react-tooltip": "^5.3.1",
     "sass": "^1.56.1",
     "secretjs": "^1.6.9",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
-    "@types/react": "18.0.27",
-    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react": "18.0.26",
+    "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-dom": "18.0.10",
     "typescript": "4.9.4"
   },
