--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vite --host",
     "build": "tsc && vite build",
-    "preview": "yarn build && vite preview"
+    "preview": "yarn build && vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
@@ -25,8 +26,8 @@
     "@mui/material": "5.11.4",
     "@noble/hashes": "1.1.5",
     "@tharsis/transactions": "0.2.5",
-    "@types/react-modal": "^3.13.1",
     "@types/react-copy-to-clipboard": "5.0.4",
+    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
@@ -59,7 +60,13 @@
     "@keplr-wallet/types": "0.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "2.8.4",
     "typescript": "4.9.4"
   },
-  "private": true
+  "private": true,
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
