--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^4.1.0",
     "google-protobuf": "^3.14.0",
     "long": "5.2.1",
+    "mixpanel-browser": "^2.46.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-copy-to-clipboard": "5.1.0",
