--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@axelar-network/axelarjs-sdk": "^0.12.6",
     "@babel/core": "^7.0.0",
     "@cosmjs/stargate": "0.26.5",
     "@emotion/react": "11.10.5",
