--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bignumber.js": "9.1.1",
     "buffer": "6.0.3",
     "chart.js": "^4.1.0",
+    "formik": "^2.2.9",
     "google-protobuf": "^3.14.0",
     "long": "5.2.1",
     "react": "18.2.0",
@@ -55,7 +56,8 @@
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.2.1",
-    "vite-tsconfig-paths": "^4.0.3"
+    "vite-tsconfig-paths": "^4.0.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
