--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
+    "@types/mixpanel-browser": "^2.38.1",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "husky": "^8.0.3",
