--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "5.11.4",
     "@noble/hashes": "1.1.5",
     "@tharsis/transactions": "0.2.5",
+    "@transak/transak-sdk": "^1.3.0",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -39,6 +40,7 @@
     "google-protobuf": "^3.14.0",
     "long": "5.2.1",
     "mixpanel-browser": "^2.46.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-copy-to-clipboard": "5.1.0",
