--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "tailwindcss": "^3.2.4",
     "vite": "^4.2.3",
     "vite-tsconfig-paths": "^4.0.3",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
