--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-helmet-async": "^1.3.0",
     "react-if": "4.1.4",
     "react-modal": "^3.16.1",
+    "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.7.0",
     "react-socks": "2.2.0",
