--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "react-helmet-async": "^1.3.0",
     "react-if": "4.1.4",
     "react-modal": "^3.16.1",
+    "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.7.0",
     "react-socks": "2.2.0",
     "react-toastify": "9.1.1",
     "react-tooltip": "^5.3.1",
     "sass": "^1.56.1",
-    "secretjs": "^1.9.3",
+    "secretjs": "^1.11.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.2.3",
