--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "@0xsquid/widget": "^1.4.81",
-    "@axelar-network/axelarjs-sdk": "^0.12.6",
+    "@axelar-network/axelarjs-sdk": "^0.13.6",
     "@babel/core": "^7.0.0",
-    "@cosmjs/stargate": "0.26.5",
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -26,12 +24,11 @@
     "@mui/icons-material": "5.11.0",
     "@mui/lab": "5.0.0-alpha.115",
     "@mui/material": "5.11.4",
-    "@noble/hashes": "1.1.5",
+    "@skip-router/core": "^0.0.13",
     "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "bignumber.js": "9.1.1",
     "buffer": "6.0.3",
@@ -55,7 +52,7 @@
     "react-toastify": "9.1.1",
     "react-tooltip": "^5.3.1",
     "sass": "^1.56.1",
-    "secretjs": "^1.9.3",
+    "secretjs": "^1.12.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.2.3",
@@ -70,7 +67,7 @@
     "@types/react-dom": "18.0.10",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "prettier": "2.8.4",
+    "prettier": "3.0.3",
     "typescript": "4.9.4"
   },
   "private": true,
