--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "vite --host",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "yarn build && vite preview",
     "prepare": "husky install"
