--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "arrowParens": "always",
   "singleQuote": true,
   "trailingComma": "none",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "printWidth": 120
 }
