--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-device-detect": "2.2.2",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-if": "4.1.4",
     "react-modal": "^3.16.1",
     "react-qrcode-logo": "^2.9.0",
