--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@0xsquid/widget": "^1.4.81",
     "@axelar-network/axelarjs-sdk": "^0.13.6",
-    "@babel/core": "^7.0.0",
-    "@emotion/styled": "^11.11.0",
+    "@babel/core": "^7.23.3",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -21,21 +19,20 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "0.11.59",
-    "@material-tailwind/react": "^1.2.4",
     "@mui/material": "5.11.4",
     "@skip-router/core": "^0.0.13",
     "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "autoprefixer": "^10.4.13",
-    "bignumber.js": "9.1.1",
-    "buffer": "6.0.3",
-    "chart.js": "^4.3.0",
+    "autoprefixer": "^10.4.16",
+    "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.5",
-    "google-protobuf": "^3.14.0",
-    "long": "5.2.1",
-    "mixpanel-browser": "^2.46.0",
+    "google-protobuf": "^3.21.2",
+    "long": "^5.2.3",
+    "mixpanel-browser": "^2.48.1",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -46,15 +43,14 @@
     "react-hot-toast": "^2.4.1",
     "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.4.3",
-    "react-select": "^5.7.0",
-    "react-socks": "2.2.0",
-    "sass": "^1.56.1",
+    "react-select": "^5.8.0",
+    "sass": "^1.69.5",
     "secretjs": "^1.12.1",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.2.3",
-    "vite-tsconfig-paths": "^4.0.3",
-    "yup": "^1.2.0",
-    "zustand": "^4.4.1"
+    "vite": "^4.5.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "yup": "^1.3.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@keplr-wallet/types": "0.11.12",
@@ -64,7 +60,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "3.0.3",
-    "typescript": "4.9.4"
+    "typescript": "^5.2.2"
   },
   "private": true,
   "lint-staged": {
