--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@keplr-wallet/types": "0.11.12",
+    "@keplr-wallet/types": "^0.12.43",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
