--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
+    "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.16",
     "bignumber.js": "^9.1.2",
