--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "^0.12.43",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "5.11.4",
     "@shadeprotocol/shadejs": "^1.0.4",
     "@skip-router/core": "^1.0.1",
@@ -45,14 +46,16 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
+    "react-if": "^4.1.5",
     "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.8.0",
+    "react-socks": "^2.2.0",
     "sass": "^1.69.5",
     "secretjs": "^1.12.4",
     "tailwindcss": "^3.3.5",
-    "vite": "4.5.1",
-    "vite-tsconfig-paths": "^4.2.2",
+    "vite": "^5.0.7",
+    "vite-tsconfig-paths": "^4.2.1",
     "yup": "^1.3.2",
     "zustand": "^4.4.6"
   },
