--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "5.11.4",
     "@shadeprotocol/shadejs": "^1.0.4",
-    "@skip-router/core": "^1.0.1",
+    "@skip-router/core": "^1.2.10",
+    "@terra-money/terra.js": "^3.1.10",
     "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
