--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@axelar-network/axelar-cgp-solidity": "^6.2.0",
     "@axelar-network/axelarjs-sdk": "^0.13.6",
     "@babel/core": "^7.23.3",
+    "@bufbuild/protobuf": "^1.7.2",
     "@emotion/styled": "^11.11.0",
+    "@evmos/transactions": "^0.3.2",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -25,7 +27,6 @@
     "@mui/material": "5.11.4",
     "@shadeprotocol/shadejs": "^1.0.4",
     "@skip-router/core": "^1.0.1",
-    "@tharsis/transactions": "0.2.5",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^4.2.0",
