--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@babel/core": "^7.23.3",
     "@bufbuild/protobuf": "^1.7.2",
     "@emotion/styled": "^11.11.0",
-    "@evmos/transactions": "^0.3.2",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -58,7 +57,10 @@
     "vite": "^5.0.12",
     "vite-tsconfig-paths": "^4.2.1",
     "yup": "^1.3.2",
-    "zustand": "^4.4.6"
+    "zustand": "^4.4.6",
+    "@evmos/eip712": "https://gitpkg.now.sh/SecretSaturn/evmosjs/packages/eip712?main",
+    "@evmos/proto": "https://gitpkg.now.sh/SecretSaturn/evmosjs/packages/proto?main",
+    "@evmos/transactions": "https://gitpkg.now.sh/SecretSaturn/evmosjs/packages/transactions?main"
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.12.43",
