--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^4.4.0",
     "formik": "^2.4.5",
     "google-protobuf": "^3.21.2",
+    "he": "^1.2.0",
     "long": "^5.2.3",
     "mixpanel-browser": "^2.48.1",
     "query-string": "^8.1.0",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.12.43",
+    "@types/he": "^1.2.3",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
