included debug logs in configurable user settings; added .env override for debug mode

--- a/example.env
+++ b/example.env
@@ -2,5 +2,9 @@
 VITE_MIXPANEL_ENABLED=false
 VITE_MIXPANEL_PROJECT_TOKEN=
 
+# Overrides debug mode in user settings
+VITE_DEBUG_MODE=false
+
+
 # Transak
 TRANSAK_API_KEY=
