--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@evmos/eip712": "^0.3.2",
     "@evmos/proto": "^0.2.1",
     "@evmos/transactions": "^0.3.2",
+    "@floating-ui/react": "^0.26.9",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
