--- a/example.env
+++ b/example.env
@@ -1,9 +1,10 @@
-# Local Development helper
-VITE_DEBUG_MODE=false
-
 # Mixpanel
 VITE_MIXPANEL_ENABLED=false
 VITE_MIXPANEL_PROJECT_TOKEN=
+
+# Overrides debug mode in user settings
+VITE_DEBUG_MODE=false
+
 
 # Transak
 TRANSAK_API_KEY=
