--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@evmos/eip712": "^0.3.2",
     "@evmos/proto": "^0.2.1",
     "@evmos/transactions": "^0.3.2",
+    "@floating-ui/react": "^0.26.9",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -57,7 +58,7 @@
     "react-socks": "^2.2.0",
     "sass": "^1.69.5",
     "secretjs": "^1.12.4",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.12",
     "vite-tsconfig-paths": "^4.2.1",
     "yup": "^1.3.2",
