--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "singleQuote": true,
   "trailingComma": "none",
   "endOfLine": "auto",
-  "printWidth": 120
+  "printWidth": 120,
+  "useTabs": false,
+  "tabWidth": 2
 }
