--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@keplr-wallet/cosmos": "^0.12.43",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "5.11.4",
+    "@multiversx/sdk-core": "^13.0.0",
     "@shadeprotocol/shadejs": "^1.1.6",
     "@skip-router/core": "^1.0.1",
-    "@swing.xyz/ui": "^0.50.17",
+    "@swing.xyz/ui": "^0.52.3",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^4.2.0",
