--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "^0.12.43",
     "@mui/material": "5.11.4",
-    "@shadeprotocol/shadejs": "^1.1.6",
-    "@skip-router/core": "^1.0.1",
+    "@shadeprotocol/shadejs": "^1.0.4",
+    "@skip-router/core": "^1.2.10",
+    "@terra-money/terra.js": "^3.1.10",
     "@swing.xyz/ui": "^0.52.3",
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-modal": "^3.13.1",
