--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.8.0",
+    "remark-gfm": "^4.0.0",
     "secretjs": "^1.12.4",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.7",
