--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@axelar-network/axelarjs-sdk": "^0.13.6",
+    "@axelar-network/axelarjs-sdk": "^0.17.0",
     "@babel/core": "^7.23.3",
     "@bufbuild/protobuf": "^1.7.2",
     "@cosmjs/stargate": "^0.32.4",
     "@evmos/transactions": "^0.3.2",
-    "@floating-ui/react": "^0.26.9",
+    "@floating-ui/react": "^0.26.27",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@keplr-wallet/cosmos": "^0.12.43",
+    "@keplr-wallet/cosmos": "^0.12.149",
     "@mui/material": "5.11.4",
     "@shadeprotocol/shadejs": "^1.5.9",
-    "@skip-router/core": "^1.2.10",
+    "@skip-go/client": "^0.11.1",
     "@swing.xyz/ui": "^0.61.4",
     "@terra-money/terra.js": "^3.1.10",
-    "@types/react-copy-to-clipboard": "5.0.4",
-    "@types/react-modal": "^3.13.1",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@types/react-copy-to-clipboard": "5.0.7",
+    "@types/react-modal": "^3.16.3",
+    "@vitejs/plugin-react": "^4.3.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
-    "chart.js": "^4.4.0",
-    "formik": "^2.4.5",
+    "chart.js": "^4.4.6",
+    "formik": "^2.4.6",
     "long": "^5.2.3",
-    "mixpanel-browser": "^2.48.1",
+    "mixpanel-browser": "^2.55.1",
     "query-string": "^8.1.0",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -44,7 +44,7 @@
     "react-dom": "18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
-    "react-qrcode-logo": "^2.9.0",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.8.0",
     "secretjs": "^1.12.4",
@@ -62,8 +62,11 @@
     "@types/react-dom": "^18.0.10",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "prettier": "3.0.3",
-    "typescript": "^5.2.2"
+    "prettier": "3.3.3",
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "protobufjs": "^7.2.5"
   },
   "private": true,
   "lint-staged": {
