--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@babel/core": "^7.23.3",
     "@bufbuild/protobuf": "^1.7.2",
     "@cosmjs/stargate": "^0.32.4",
+    "@emotion/styled": "^11.13.0",
     "@evmos/transactions": "^0.3.2",
     "@floating-ui/react": "^0.26.27",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@keplr-wallet/cosmos": "^0.12.149",
-    "@mui/material": "5.11.4",
+    "@mui/material": "5.16.7",
     "@shadeprotocol/shadejs": "^1.5.9",
     "@skip-go/client": "^0.11.1",
     "@swing.xyz/ui": "^0.61.4",
@@ -28,7 +29,6 @@
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.3",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.20",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
@@ -40,26 +40,26 @@
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "5.1.0",
-    "react-device-detect": "2.2.2",
+    "react-device-detect": "2.2.3",
     "react-dom": "18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
     "react-qrcode-logo": "^3.0.0",
-    "react-router-dom": "^6.4.3",
-    "react-select": "^5.8.0",
-    "secretjs": "^1.12.4",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.7",
-    "vite-tsconfig-paths": "^4.2.1",
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.2",
+    "secretjs": "^1.12.5",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.10",
+    "vite-tsconfig-paths": "^4.3.2",
     "ws": "^8.17.1",
-    "yup": "^1.3.2",
+    "yup": "^1.4.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.12.43",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react-dom": "^18.3.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "3.3.3",
