--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "@babel/core": "^7.23.3",
     "@bufbuild/protobuf": "^1.7.2",
     "@cosmjs/stargate": "^0.32.4",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/styled": "^11.14.0",
     "@evmos/transactions": "^0.3.2",
     "@floating-ui/react": "^0.26.27",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@keplr-wallet/cosmos": "^0.12.149",
+    "@keplr-wallet/cosmos": "^0.12.169",
     "@mui/material": "5.16.7",
-    "@shadeprotocol/shadejs": "^1.5.9",
+    "@shadeprotocol/shadejs": "^1.5.10",
     "@skip-go/client": "^0.11.1",
-    "@swing.xyz/ui": "^0.61.4",
+    "@swing.xyz/ui": "^0.63.0",
     "@terra-money/terra.js": "^3.1.10",
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-modal": "^3.16.3",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "long": "^5.2.3",
     "mixpanel-browser": "^2.55.1",
-    "query-string": "^8.1.0",
+    "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "5.1.0",
@@ -46,10 +46,10 @@
     "react-hot-toast": "^2.4.1",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.27.0",
-    "react-select": "^5.8.2",
-    "secretjs": "^1.12.5",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10",
+    "react-select": "^5.9.0",
+    "secretjs": "^1.15.0-beta.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.11",
     "vite-tsconfig-paths": "^4.3.2",
     "ws": "^8.17.1",
     "yup": "^1.4.0",
@@ -60,9 +60,9 @@
     "@types/mixpanel-browser": "^2.50.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.3.1",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "3.3.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "3.4.2",
     "typescript": "^5.6.3"
   },
   "overrides": {
