--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.0",
     "@babel/core": "^7.23.3",
-    "@bufbuild/protobuf": "^1.7.2",
+    "@buf/evmos_evmos.bufbuild_es": "^2.2.3-20240408103001-f65bdd0ffeff.1",
+    "@bufbuild/protobuf": "^2.2.3",
     "@cosmjs/stargate": "^0.32.4",
     "@emotion/styled": "^11.14.0",
+    "@evmos/proto": "^0.2.1",
     "@evmos/transactions": "^0.3.2",
     "@floating-ui/react": "^0.26.27",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -22,7 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@keplr-wallet/cosmos": "^0.12.169",
     "@mui/material": "5.16.7",
-    "@shadeprotocol/shadejs": "^1.5.10",
+    "@shadeprotocol/shadejs": "^1.6.0",
     "@skip-go/client": "^0.11.1",
     "@swing.xyz/ui": "^0.63.0",
     "@terra-money/terra.js": "^3.1.10",
@@ -45,9 +47,9 @@
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
     "react-qrcode-logo": "^3.0.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.1",
     "react-select": "^5.9.0",
-    "secretjs": "^1.15.0-beta.3",
+    "secretjs": "^1.15.0",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^4.3.2",
@@ -56,17 +58,18 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@keplr-wallet/types": "^0.12.43",
+    "@keplr-wallet/types": "^0.12.169",
     "@types/mixpanel-browser": "^2.50.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.3.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "3.4.2",
+    "sass-embedded": "^1.83.0",
     "typescript": "^5.6.3"
   },
   "overrides": {
-    "protobufjs": "^7.2.5"
+    "protobufjs": "^7.4.0"
   },
   "private": true,
   "lint-staged": {
