--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite --host",
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "tsc && export NODE_OPTIONS='--max_old_space_size=8192' && vite build",
     "preview": "yarn build && vite preview",
     "prepare": "husky install"
   },
