Revert "Fix dependencies, add overrides, reduce bundle size"

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "start": "vite --host",
     "dev": "vite --host",
-    "build": "tsc && NODE_OPTIONS='--max-old-space-size=8192' vite build",
-    "preview": "vite preview",
+    "build": "tsc && export NODE_OPTIONS='--max_old_space_size=8192' && vite build",
+    "preview": "yarn build && vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.2",
+    "@babel/core": "^7.26.10",
     "@buf/evmos_evmos.bufbuild_es": "^2.2.3-20240408103001-f65bdd0ffeff.1",
+    "@bufbuild/protobuf": "^2.2.3",
     "@cosmjs/stargate": "^0.33.0",
     "@emotion/styled": "^11.14.0",
     "@evmos/proto": "^0.2.1",
@@ -20,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@keplr-wallet/cosmos": "^0.12.196",
     "@mui/material": "5.16.7",
     "@shadeprotocol/shadejs": "^1.7.0",
     "@skip-go/client": "^0.16.17",
@@ -27,9 +30,10 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "formik": "^2.4.6",
-    "long": "^5.3.1",
+    "long": "^5.2.3",
     "mixpanel-browser": "^2.61.1",
     "query-string": "^9.1.1",
     "react": "18.3.1",
@@ -41,9 +45,9 @@
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.28.1",
     "react-select": "^5.9.0",
-    "secretjs": "1.15.1",
+    "secretjs": "^1.15.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.14",
+    "vite": "5.4.14",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0",
     "zustand": "^4.4.6"
@@ -52,20 +56,22 @@
     "@keplr-wallet/types": "^0.12.196",
     "@types/mixpanel-browser": "^2.51.0",
     "@types/react": "^18.3.18",
-    "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "^18.3.5",
+    "@types/react-copy-to-clipboard": "5.0.7",
+    "@types/react-modal": "^3.16.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.83.1",
     "typescript": "^5.6.3"
   },
   "overrides": {
     "protobufjs": "^7.4.0",
     "elliptic": "6.6.1",
     "axios": "1.8.2",
-    "esbuild": "0.25.1",
+    "esbuild": "0.25.0",
     "ws": "8.18.1",
-    "secretjs": "1.15.1",
+    "vite": "5.4.14",
     "@babel/runtime": "7.26.10"
   },
   "private": true,
